--- a/personagens/felix/29800.html
+++ b/personagens/felix/29800.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,9 +18,15 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Ao chegar no jogo Missão de Herói Felix encontra o que ele descreve como a coisa com os gráficos mais bonitos que ele já viu chamada de Sargento Calhoun, mas sem perder o foco ele vê que pela detonação do local Ralph havia passado por ali e a Sargento está indo atras dele, porque acidentalmente ele levou um <abbr title="Inseto eletronico, meio obvio, não?">insetronico</abbr> que se não for destruído pode devorar todo o jogo.</h2>
+                    <h2>Ao chegar no jogo Missão de Herói Felix encontra o que ele descreve como a coisa com os gráficos
+                        mais bonitos que ele já viu chamada de Sargento Calhoun, mas sem perder o foco ele vê que pela
+                        detonação do local Ralph havia passado por ali e a Sargento está indo atras dele, porque
+                        acidentalmente ele levou um <abbr title="Inseto eletronico, meio obvio, não?">insetronico</abbr>
+                        que se não for destruído pode devorar todo o jogo.</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('A Sargento Calhoun diz que seguirá Ralph para encontrar o insetronico.\nA - Insistir em ir junto e oferecer sua ajuda.\nB - Ir de volta para casa.\nC - Seguir sozinho sem nehuma pista', 'a', 'b', 'c', 'Ela diz que você pode ser util com suas ferramentas e por conhecer Ralph, então vocês partem juntos para o jogo corrida doce.', 'Desistir não é algo que um Heroi faz e Felix Jr se recusa a fazer isso.', 'Sem pistas de onde está o seu amigo esse caminho solitario não pode ser trilhado.', './39471.html')">Estamos perto!</div>
+                <div class="btn"
+                    onclick="validarResposta('A Sargento Calhoun diz que seguirá Ralph para encontrar o insetronico.\nA - Insistir em ir junto e oferecer sua ajuda.\nB - Ir de volta para casa.\nC - Seguir sozinho sem nehuma pista', 'a', 'b', 'c', 'Ela diz que você pode ser util com suas ferramentas e por conhecer Ralph, então vocês partem juntos para o jogo corrida doce.', 'Desistir não é algo que um Heroi faz e Felix Jr se recusa a fazer isso.', 'Sem pistas de onde está o seu amigo esse caminho solitario não pode ser trilhado.', './39471.html')">
+                    Estamos perto!</div>
             </div>
         </div>
         <div class="controlImg">
@@ -28,4 +36,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
