--- a/personagens/felix/39471.html
+++ b/personagens/felix/39471.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,9 +18,14 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Felix Jr e Sargento Calhoun chegam a corrida doce e após passarem por vários desafios e encontram Ralph e Vanelope, Ralph conta que Vanellope precisa ganhar a corrida porém seu carro está em migalhas, totalmente destruído e inutilizável, e já não há mais tempo para eles consertarem.</h2>
+                    <h2>Felix Jr e Sargento Calhoun chegam a corrida doce e após passarem por vários desafios e
+                        encontram Ralph e Vanelope, Ralph conta que Vanellope precisa ganhar a corrida porém seu carro
+                        está em migalhas, totalmente destruído e inutilizável, e já não há mais tempo para eles
+                        consertarem.</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('O que Felix Jr deve fazer?\nA - Ajudar seu amigo Ralph e consertar o carro de Vanelope.\nB - Tentar convercer Ralph a voltar para o seu jogo pois ele é necessario lá.\nC - Não fazer nada.', 'a', 'b', 'c', 'Felix Jr usa o seu martelo e em segundos conserta o carro de Vanellope para que ela possa participar da corrida', 'Ralph se nega a retornar sem ajudar a sua amiga a vencer a corrida.', 'Essa não é a ação que um heroi faz.', './49975.html')">E agora?</div>
+                <div class="btn"
+                    onclick="validarResposta('O que Felix Jr deve fazer?\nA - Ajudar seu amigo Ralph e consertar o carro de Vanelope.\nB - Tentar convercer Ralph a voltar para o seu jogo pois ele é necessario lá.\nC - Não fazer nada.', 'a', 'b', 'c', 'Felix Jr usa o seu martelo e em segundos conserta o carro de Vanellope para que ela possa participar da corrida', 'Ralph se nega a retornar sem ajudar a sua amiga a vencer a corrida.', 'Essa não é a ação que um heroi faz.', './49975.html')">
+                    E agora?</div>
             </div>
         </div>
         <div class="controlImg">
@@ -28,4 +35,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
