--- a/personagens/ralph/24693.html
+++ b/personagens/ralph/24693.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,9 +18,14 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Ralph consegue sua medalha de herói, após apanhar de vários insetos mutantes mas com a ajuda de outros personagens do jogo Missão de Herói Ralph consegue subir a torre e conseguir a sua medalha.<br>Porém ao fazer isso Ralph acidentalmente desperta um enxame de novos insetos e agora ele está sozinho.</h2>
+                    <h2>Ralph consegue sua medalha de herói, após apanhar de vários insetos mutantes mas com a ajuda de
+                        outros personagens do jogo Missão de Herói Ralph consegue subir a torre e conseguir a sua
+                        medalha.<br>Porém ao fazer isso Ralph acidentalmente desperta um enxame de novos insetos e agora
+                        ele está sozinho.</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('O que Ralph deverá fazer agora?\nA - Lutar contra os insetos\nB - Fugir usando uma nave de escape\nC - Fugir correndo', 'b', 'a', 'c', 'Ralph entra na nave e começa a apertar o maximo de botões que consegue ver!', 'Ralph tenta com seus punhos afastar o maximo de insetos mutantes, porem ele não é forte o suficiente.', 'Com suas pernas desproporcionais ao seu corpo Ralph não é muito veloz e não chega muito longe até que seja rodeado por insetos.', './34927.html')">O que fazer? :O</div>
+                <div class="btn"
+                    onclick="validarResposta('O que Ralph deverá fazer agora?\nA - Lutar contra os insetos\nB - Fugir usando uma nave de escape\nC - Fugir correndo', 'b', 'a', 'c', 'Ralph entra na nave e começa a apertar o maximo de botões que consegue ver!', 'Ralph tenta com seus punhos afastar o maximo de insetos mutantes, porem ele não é forte o suficiente.', 'Com suas pernas desproporcionais ao seu corpo Ralph não é muito veloz e não chega muito longe até que seja rodeado por insetos.', './34927.html')">
+                    O que fazer? :O</div>
             </div>
         </div>
         <div class="controlImg">
@@ -28,4 +35,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
