--- a/personagens/ralph/34927.html
+++ b/personagens/ralph/34927.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,10 +18,19 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Ralph entra na nave e sem saber controlar ele acaba entrando em um jogo diferente, ao chegar Ralph nota que não encontra sua medalha, após olhar ao redor ele a encontra presa em uma árvore, ao se aproximar da árvore Ralph vê que há uma menina com a sua medalha, seu nome é Vanellope Von Schweetz, então Ralph diz:</h2>
-                    <p>Ralph: Ei sua pestinha, me dê essa medalha ela é minha eu ganhei ela no jogo missão de herói.<br>Vanellope cai em gargalhadas e diz: Mijão de herói? Que jogo bobo é esse? E completa.<br>Vanellope: É o seguinte grandalhão, achado não é roubado, e eu vou usar essa medalha para poder participar da corrida e provar que eu posso ser uma corredora e então ela corre com a sua medalha.</p>
+                    <h2>Ralph entra na nave e sem saber controlar ele acaba entrando em um jogo diferente, ao chegar
+                        Ralph nota que não encontra sua medalha, após olhar ao redor ele a encontra presa em uma árvore,
+                        ao se aproximar da árvore Ralph vê que há uma menina com a sua medalha, seu nome é Vanellope Von
+                        Schweetz, então Ralph diz:</h2>
+                    <p>Ralph: Ei sua pestinha, me dê essa medalha ela é minha eu ganhei ela no jogo missão de
+                        herói.<br>Vanellope cai em gargalhadas e diz: Mijão de herói? Que jogo bobo é esse? E
+                        completa.<br>Vanellope: É o seguinte grandalhão, achado não é roubado, e eu vou usar essa
+                        medalha para poder participar da corrida e provar que eu posso ser uma corredora e então ela
+                        corre com a sua medalha.</p>
                 </div>
-                <div class="btn" onclick="validarResposta('Vendo Vanellope se destanciar Ralph precisa fazer algo!\nA - Perseguir Vanellope.\nB - Desistir e ir de volta para casa.\nC - Ajudar Vanellope a ganhar a corrida.', 'c', 'a', 'b', 'Ralph grita para a baixinha catarrenta que pode ajudar ela a ganhar a corrida.', 'Ao tentar correr para alcançar Vanellope Ralph fica preso no achocolatado.\nRalph odeia chocolate!', 'Desistir não é o que um Heroi faz e Ralph sabe disso.', './49657.html')">Essa pestinha >:(</div>
+                <div class="btn"
+                    onclick="validarResposta('Vendo Vanellope se destanciar Ralph precisa fazer algo!\nA - Perseguir Vanellope.\nB - Desistir e ir de volta para casa.\nC - Ajudar Vanellope a ganhar a corrida.', 'c', 'a', 'b', 'Ralph grita para a baixinha catarrenta que pode ajudar ela a ganhar a corrida.', 'Ao tentar correr para alcançar Vanellope Ralph fica preso no achocolatado.\nRalph odeia chocolate!', 'Desistir não é o que um Heroi faz e Ralph sabe disso.', './49657.html')">
+                    Essa pestinha >:(</div>
             </div>
         </div>
         <div class="controlImg">
@@ -29,4 +40,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
