--- a/personagens/ralph/49657.html
+++ b/personagens/ralph/49657.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,7 +18,8 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Você se provou um verdadeiro Herói, ajudando Vanellope a vencer a corrida e recebe dela uma medalha escrito:"Você é meu herói!" Parabéns!<br>Você Detonou!</h2>
+                    <h2>Você se provou um verdadeiro Herói, ajudando Vanellope a vencer a corrida e recebe dela uma
+                        medalha escrito:"Você é meu herói!" Parabéns!<br>Você Detonou!</h2>
                     <p>Ajudar o próximo é ajudar você mesmo a ser uma pessoa melhor!</p>
                 </div>
                 <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
@@ -29,4 +32,5 @@
     </div>
     <script src="../../script/nexpag.js"></script>
 </body>
+
 </html>
