--- a/personagens/user/47771.html
+++ b/personagens/user/47771.html
@@ -19,7 +19,8 @@
             <div class="tela">
                 <div class="texto">
                     <h2>Linda caranga que nós temos aqui <span id="userName">Usuario</span></h2>
-                    <h3>No horizonte vemos o Rei doce se aproximar com seus capangas em seus veículos, precisamos sair daqui o mais rápido possível. há 3 caminhos possíveis.</h3>
+                    <h3>No horizonte vemos o Rei doce se aproximar com seus capangas em seus veículos, precisamos sair
+                        daqui o mais rápido possível. há 3 caminhos possíveis.</h3>
                 </div>
                 <div class="btn" onclick="correr('./57774.html',1)">Correr!</div>
             </div>
@@ -32,4 +33,5 @@
     <script src="../../script/usuarioData1.js"></script>
     <script src="../../script/user.js"></script>
 </body>
+
 </html>
