--- a/personagens/user/67443.html
+++ b/personagens/user/67443.html
@@ -19,7 +19,8 @@
             <div class="tela">
                 <div class="texto">
                     <h2><span id="userName">Usuario</span> Parabens!</h2>
-                    <h3>Você correu como o vento e conseguiu salvar Vanellope ela nunca desconfiou do seu potencial!</h3>
+                    <h3>Você correu como o vento e conseguiu salvar Vanellope ela nunca desconfiou do seu potencial!
+                    </h3>
                 </div>
                 <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
             </div>
@@ -33,4 +34,5 @@
     <script src="../../script/usuarioData1.js"></script>
     <script src="../../script/user.js"></script>
 </body>
+
 </html>
