--- a/personagens/felix/49975.html
+++ b/personagens/felix/49975.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,9 +18,13 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Após Felix Jr consertar o veiculo de Vanelope ela parte em direção a corrida, Ralph vai assistir a corrida para apoiar sua amiga enquanto a Sargento Calhoun quer seguir a sua busca pelo insetronico perdido.</h2>
+                    <h2>Após Felix Jr consertar o veiculo de Vanelope ela parte em direção a corrida, Ralph vai assistir
+                        a corrida para apoiar sua amiga enquanto a Sargento Calhoun quer seguir a sua busca pelo
+                        insetronico perdido.</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('Agora Felix Jr se vê dividido, qual decisão ele deve tomar?\nA - Seguir com a Sargento Calhoun\nB - Assistir a corrida com Ralph\nC - Convidar a Sargento Calhoun para assistir a corrida juntos', 'c', 'a', 'b', 'Você convida a Sargento Calhoun para assitir a corrida e ela aceita com um estranho sorriso no rosto, algo que Felix Jr não tinha visto até então, final feliz?', 'Você não pode abandonar o seu amigo em um momento tão especial para ele.', 'Como heroi você não pode deixar que a Sargento Calhoun siga sozinha nesse caminho.', './53377.html')">Qual direção?</div>
+                <div class="btn"
+                    onclick="validarResposta('Agora Felix Jr se vê dividido, qual decisão ele deve tomar?\nA - Seguir com a Sargento Calhoun\nB - Assistir a corrida com Ralph\nC - Convidar a Sargento Calhoun para assistir a corrida juntos', 'c', 'a', 'b', 'Você convida a Sargento Calhoun para assitir a corrida e ela aceita com um estranho sorriso no rosto, algo que Felix Jr não tinha visto até então, final feliz?', 'Você não pode abandonar o seu amigo em um momento tão especial para ele.', 'Como heroi você não pode deixar que a Sargento Calhoun siga sozinha nesse caminho.', './53377.html')">
+                    Qual direção?</div>
             </div>
         </div>
         <div class="controlImg">
@@ -28,4 +34,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
