--- a/personagens/felix/53377.html
+++ b/personagens/felix/53377.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,8 +18,13 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>No meio da corrida aparece o insetronico e Felix, Ralph e a Sargento Calhoun fazem um ótimo trabalho em equipe para conter o ataque desse insetronico, enquanto Ralph defende as pessoas e a Sargento Calhoun luta com o insetronico Felix Jr conserta tudo que é destruído nesse processo.<br>Por fim graças ao trabalho em equipe tudo ocorre bem e Vanelope consegue atravessar a linha de chegada!</h2>
-                    <p>"Eu sou parte de uma equipe. Então, quando venço, não sou eu apenas quem vence. De certa forma, Termino o trabalho de um grupo enorme de pessoas" - Ayrton Senna</p>
+                    <h2>No meio da corrida aparece o insetronico e Felix, Ralph e a Sargento Calhoun fazem um ótimo
+                        trabalho em equipe para conter o ataque desse insetronico, enquanto Ralph defende as pessoas e a
+                        Sargento Calhoun luta com o insetronico Felix Jr conserta tudo que é destruído nesse
+                        processo.<br>Por fim graças ao trabalho em equipe tudo ocorre bem e Vanelope consegue atravessar
+                        a linha de chegada!</h2>
+                    <p>"Eu sou parte de uma equipe. Então, quando venço, não sou eu apenas quem vence. De certa forma,
+                        Termino o trabalho de um grupo enorme de pessoas" - Ayrton Senna</p>
                 </div>
                 <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
             </div>
@@ -29,4 +36,5 @@
     </div>
     <script src="../../script/nexpag.js"></script>
 </body>
+
 </html>
