--- a/personagens/ralph/14098.html
+++ b/personagens/ralph/14098.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
     <link rel="stylesheet" href="../../style/arcadeBox.css">
     <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
+
 <body>
     <div class="positBox">
         <div class="arcadeBox">
@@ -16,9 +18,14 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2>Após não ser convidado para o aniversário de 30 anos do jogo que Ralph trabalha ele decide ir atrás de sua medalha de herói para provar o seu valor. Ao chegar na estação central ele se depara com 3 jogos que pode competir para tentar ganhar uma medalha. Mas lembre-se a maior vantagem de Ralph é sua força bruta.</h2>
+                    <h2>Após não ser convidado para o aniversário de 30 anos do jogo que Ralph trabalha ele decide ir
+                        atrás de sua medalha de herói para provar o seu valor. Ao chegar na estação central ele se
+                        depara com 3 jogos que pode competir para tentar ganhar uma medalha. Mas lembre-se a maior
+                        vantagem de Ralph é sua força bruta.</h2>
                 </div>
-                <div class="btn" onclick="validarResposta('Para onde Ralph deverá ir?\nA - Pac-man\nB - Sonic\nC - Misão de Heroi', 'c', 'a', 'b', 'Ralph segue com bravura em direção a Missão de Heroi!', 'Ralph entrou no Pac-Man e por pouco ele não consegue fugir do fantasma, ele acaba correndo para saida e vê que esse jogo não é pra ele.', 'Serio? ninguem consegue correr mais que aquele porco-espinho azul.', './24693.html')">Vamos lá!</div>
+                <div class="btn"
+                    onclick="validarResposta('Para onde Ralph deverá ir?\nA - Pac-man\nB - Sonic\nC - Misão de Heroi', 'c', 'a', 'b', 'Ralph segue com bravura em direção a Missão de Heroi!', 'Ralph entrou no Pac-Man e por pouco ele não consegue fugir do fantasma, ele acaba correndo para saida e vê que esse jogo não é pra ele.', 'Serio? ninguem consegue correr mais que aquele porco-espinho azul.', './24693.html')">
+                    Vamos lá!</div>
             </div>
         </div>
         <div class="controlImg">
@@ -28,4 +35,5 @@
     </div>
     <script src="../../script/fases.js"></script>
 </body>
+
 </html>
