--- a/personagens/felix/14577.html
+++ b/personagens/felix/14577.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Where's Ralph?</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
-    <link rel="stylesheet" href="../../style/teste.css">
+    <link rel="stylesheet" href="../../style/14577.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
 
