--- a/personagens/felix/39471.html
+++ b/personagens/felix/39471.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Olha ele ae!</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="stylesheet" href="../../style/39471.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
 
