--- a/personagens/felix/53377.html
+++ b/personagens/felix/53377.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Parabens!</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="stylesheet" href="../../style/53377.css">
     <link rel="shortcut icon" href="../../imagens/favicon/felixfavicon.ico" type="image/x-icon">
 </head>
 
