--- a/personagens/ralph/49657.html
+++ b/personagens/ralph/49657.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Você é um verdadeiro heroi!</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="stylesheet" href="../../style/49657.css">
     <link rel="shortcut icon" href="../../imagens/favicon/ralphfavicon.ico" type="image/x-icon">
 </head>
 
