--- a/personagens/user/34714.html
+++ b/personagens/user/34714.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="stylesheet" href="../../style/34714.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
