--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -28,6 +28,7 @@
             <div>Menções honrosas</div>
             <div class="transparent">|</div>
             <div class="transparent">|</div>
+            <div class="btn"><a href="" target="_blank">Tente um jogo diferente</a></div>
         </div>
         <div class="creditos1">
             <div>Everton Seixas, Igor Santos</div>
@@ -41,8 +42,9 @@
             <div class="transparent">|</div>
             <div>Inara Almeida, Bruna</div>
             <div>Henryque Lucena, Everton Seixas</div>
-            <div>Google</div>
-            <div>Youtube</div>
+            <div>Lucas Roberto, Rodrigo Assunção</div>
+            <div>Youtube, Google</div>
+            <div class="btn"><a href="../index.html">Tente novamente</a></div>
         </div>
     </div>
 </body>
