--- a/personagens/user/67443.html
+++ b/personagens/user/67443.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="../../style/arcadeBox.css">
+    <link rel="stylesheet" href="../../style/49657.css">
     <link rel="shortcut icon" href="../../imagens/favicon/userfavicon.ico" type="image/x-icon">
 </head>
 
@@ -19,7 +20,7 @@
             <div class="tela">
                 <div class="texto">
                     <h2><span id="userName">Usuario</span> Parabens!</h2>
-                    <h3>Você correu como o vento e conseguiu salvar Vanellope ela nunca desconfiou do seu potencial!
+                    <h3>Você correu como o vento e conseguiu salvar Vanellope, ela nunca desconfiou do seu potencial!
                     </h3>
                 </div>
                 <div class="btn" onclick="nextPagina('../creditos.html')">Fim de Jogo</div>
