--- a/personagens/choseChar.html
+++ b/personagens/choseChar.html
@@ -21,18 +21,18 @@
                     <spam id="userName">Usuario</spam> selecione o seu personagem!
                 </h2>
                 <div class="personagem">
-                    <div class="persona1" onclick="selecioneRalph()">
+                    <div class="persona1" onclick="selecionePersonagem('../personagens/ralph/14098.html')">
                         <img src="../imagens/ralphgif.webp" width="200px" height="200px" alt="">
                         <h3>Este é Ralph e ele está muito triste por não ter uma medalha de heroi e não ser convidado
                             para o aniversario de 30 anos do seu jogo, porem com todas as suas forças ele tentará provar
                             que é possivel um vilão se tornar um Heroi!</h3>
                     </div>
-                    <div class="persona2" onclick="selecioneFelix()">
+                    <div class="persona2" onclick="selecionePersonagem('../personagens/felix/14577.html')">
                         <img src="../imagens/felix-gif.gif" alt="">
                         <h3>Este é Felix Jr e sem seu amigo Ralph o seu jogo está com os dias contados, para consertar
                             isso Felix parte em busca de encontrar seu amigo.</h3>
                     </div>
-                    <div class="persona3" onclick="selecioneUsuario()">
+                    <div class="persona3" onclick="selecionePersonagem('../personagens/user/18714.html')">
                         <img src="../imagens/usuario.gif" alt="">
                         <h3>Olá, <spam id="userName1">Usuario</spam> você tambem pode fazer parte dessa historia e ser
                             um heroi detonando tudo que encontrar pelo caminho! Vamos embarcar nessa jornada?</h3>
