--- a/personagens/escopo.html
+++ b/personagens/escopo.html
@@ -35,6 +35,7 @@
             <img src="../imagens/controle2.jpg" alt="" class="controL">
         </div>
     </div>
+    <script src="../script/selecionePersonagem.js"></script>
 </body>
 
 </html>
