--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -35,7 +35,7 @@
             <div class="transparent">|</div>
             <div>Igor Santos</div>
             <div class="transparent">|</div>
-            <div>Erika Rodrigues</div>
+            <div><a href="https://erikatav.github.io/VidaDeInseto/" target="_blank">Erika Rodrigues</a></div>
             <div>Jiulie Vitoria</div>
             <div>Beatriz Mioranza</div>
             <div>João Pedro</div>
