--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -37,7 +37,7 @@
             <div class="transparent">|</div>
             <div><a href="https://erikatav.github.io/VidaDeInseto/" target="_blank">Erika Rodrigues</a></div>
             <div>Jiulie Vitoria</div>
-            <div>Beatriz Mioranza</div>
+            <div><a href="https://beatrizmioranza.github.io/projetofinalmodulo1resilia/" target="_blank">Beatriz Mioranza</a></div>
             <div>João Pedro</div>
             <div class="transparent">|</div>
             <div>Inara Almeida, Bruna</div>
