--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -33,14 +33,14 @@
         <div class="creditos1">
             <div>Everton Seixas, Igor Santos</div>
             <div class="transparent">|</div>
-            <div>Igor Santos</div>
+            <div><a href="">Igor Santos</a></div>
             <div class="transparent">|</div>
             <div><a href="https://erikatav.github.io/VidaDeInseto/" target="_blank">Erika Rodrigues</a></div>
-            <div>Jiulie Vitoria</div>
+            <div><a href="https://jiulievitoria.github.io/A-Grande-Vitoria-da-China/" target="_blank">Jiulie Vitoria</a></div>
             <div><a href="https://beatrizmioranza.github.io/projetofinalmodulo1resilia/" target="_blank">Beatriz Mioranza</a></div>
-            <div>João Pedro</div>
+            <div><a href="">João Pedro</a></div>
             <div class="transparent">|</div>
-            <div>Inara Almeida, Bruna</div>
+            <div>Inara Almeida, Bruna Wesselka</div>
             <div>Henryque Lucena, Everton Seixas</div>
             <div>Lucas Roberto, Rodrigo Assunção</div>
             <div>Youtube, Google</div>
