--- a/personagens/user/18714.html
+++ b/personagens/user/18714.html
@@ -19,7 +19,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span id="userName">Usuario</span> chega em corrida doce e recebe uma mensagem de um holograma
+                    <h2><spam id="userName">Usuario</spam> chega em corrida doce e recebe uma mensagem de um holograma
                         de Vannellope, pedindo sua ajuda pois está presa na masmoriso, o Rei doce a prendeu lá e ela lhe
                         escolheu para representar ela na corrida, basta você ganhar para que ela seja libertada.</h2>
                     <h3>Quando a mensagem termina o Rei doce e seus capangas se aproximam para tentar te prender para
