--- a/personagens/creditos.html
+++ b/personagens/creditos.html
@@ -28,7 +28,7 @@
             <div>Menções honrosas</div>
             <div class="transparent">|</div>
             <div class="transparent">|</div>
-            <div class="btn"><a href="" target="_blank">Tente um jogo diferente</a></div>
+            <div class="btn"><a href="https://beatrizmioranza.github.io/projetofinalmodulo1resilia/" target="_blank">Tente um jogo diferente</a></div>
         </div>
         <div class="creditos1">
             <div>Everton Seixas, Igor Santos</div>
