--- a/personagens/user/47771.html
+++ b/personagens/user/47771.html
@@ -15,7 +15,7 @@
     <div class="positBox">
         <div class="arcadeBox">
             <div class="letreiro">
-                <h1>De<span class="apaga">ton</span>a<span class="apaga">!</span></h1>
+                <h1>De<spam class="apaga">ton</spam>a<span class="apaga">!</span></h1>
             </div>
             <div class="tela">
                 <div class="texto">
