--- a/personagens/user/57774.html
+++ b/personagens/user/57774.html
@@ -15,11 +15,11 @@
     <div class="positBox">
         <div class="arcadeBox">
             <div class="letreiro">
-                <h1>De<span class="apaga">ton</span>a<span class="apaga">!</span></h1>
+                <h1>De<spam class="apaga">ton</span>a<span class="apaga">!</span></h1>
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span id="userName">Usuario</span> você é fera nas pistas!</h2>
+                    <h2><spam id="userName">Usuario</spam> você é fera nas pistas!</h2>
                     <h3>Chegamos a pista de corrida e agora basta você escolher qual pista você quer correr para vencer
                         o Rei doce e libertar Vanellope. <br>Você está pronto?</h3>
 
