--- a/personagens/user/67443.html
+++ b/personagens/user/67443.html
@@ -19,7 +19,7 @@
             </div>
             <div class="tela">
                 <div class="texto">
-                    <h2><span id="userName">Usuario</span> Parabens!</h2>
+                    <h2><spam id="userName">Usuario</spam> Parabens!</h2>
                     <h3>Você correu como o vento e conseguiu salvar Vanellope, ela nunca desconfiou do seu potencial!
                     </h3>
                 </div>
